@@ -3562,6 +3562,20 @@ specifier|private
 name|Boolean
 name|shardUnique
 decl_stmt|;
+DECL|method|BalanceShardUnique
+specifier|public
+name|BalanceShardUnique
+parameter_list|()
+block|{
+name|this
+operator|.
+name|action
+operator|=
+name|CollectionAction
+operator|.
+name|BALANCESHARDUNIQUE
+expr_stmt|;
+block|}
 DECL|method|getPropertyName
 specifier|public
 name|String
